--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="MobileOptimized" content="320">
     <meta http-equiv="cleartype" content="on">
 
+    <link rel="stylesheet" type="text/css" href='LibraFranklin.css' />
     <style>
         html,
         body {
